[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Background/Mountains1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Background/Mountains2.png" type="Texture" id=2]
[ext_resource path="res://YetiScenes/TitleMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/GUI/ButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GUI/Button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Background/Mountain4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Background/MountainsBig.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background/Mountain3.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Downhill.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SoundDesign - Select UI.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/GUI/YetiSlopes.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Yeti/TitleSquish.tres" type="Animation" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Font.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/Snowflakes.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Mountain"
length = 10.0
loop = true

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "On",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 15 )

[sub_resource type="Animation" id=4]
resource_name = "Click"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SkinButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 160, 140 ), Vector2( 160, 137 ), Vector2( 160, 140 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 3.0

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Skin1/ClickSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "CutsceneGrow"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 188.443, -0.25, 0, 0.25, 0, 177.649, -0.25, 0, 0.25, 0, 188.443, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 73.873, -0.25, 0, 0.25, 0, 73.873, -0.25, 0, 0.25, 0, 73.873, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.6 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 156, 105.403 )
scale = Vector2( 1.04, 1.04 )
transform = Transform2D( 1.04, 0, 0, 1.04, 156, 105.403 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
scale = Vector2( 1, 2.913 )
texture = ExtResource( 6 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 8 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.02258, 0.977421 )
texture = ExtResource( 7 )
offset = Vector2( -0.445, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer/Sprite"]
autoplay = "Mountain"
anims/Mountain = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickNode" type="Node2D" parent="CenterContainer"]
position = Vector2( 160, 140 )

[node name="SkinButton" type="Node2D" parent="CenterContainer/ClickNode"]

[node name="ButtonSprite" type="AnimatedSprite" parent="CenterContainer/ClickNode/SkinButton"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
animation = "Off"

[node name="ClickArea" type="Area2D" parent="CenterContainer/ClickNode/SkinButton"]

[node name="Collision" type="CollisionShape2D" parent="CenterContainer/ClickNode/SkinButton/ClickArea"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="ClickButtonPlayer" type="AnimationPlayer" parent="CenterContainer/ClickNode"]
anims/Click = SubResource( 4 )

[node name="Sounds" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
autoplay = true

[node name="ButtonSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_left = 0.475
anchor_right = 1.0
anchor_bottom = 0.596
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_top = 0.01
anchor_right = 0.333
anchor_bottom = 0.543
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="Node2D" parent="Control"]
position = Vector2( 241.406, 42.7631 )
scale = Vector2( 1.042, 0.958 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Control/Skin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -9.5
margin_right = 19.5
margin_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3.15, 2.85 )
rect_pivot_offset = Vector2( 19.6702, 9.65519 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Skin/TextureRect"]
autoplay = "IdleSquish"
playback_speed = 0.3
anims/IdleSquish = ExtResource( 12 )

[node name="Cursor" type="Node2D" parent="."]
visible = false

[node name="Skin1" type="Node2D" parent="Cursor"]

[node name="ClickSkin" type="Node2D" parent="Cursor/Skin1"]

[node name="CursorSprite" type="Sprite" parent="Cursor/Skin1/ClickSkin"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="CursorArea" type="Area2D" parent="Cursor"]

[node name="Collision" type="CollisionShape2D" parent="Cursor/CursorArea"]
shape = SubResource( 5 )

[node name="ClickPlayer" type="AnimationPlayer" parent="Cursor"]
anims/Click = SubResource( 6 )

[node name="TransitionTween" type="Tween" parent="."]

[node name="StartTween" type="Tween" parent="."]

[node name="Score" type="Node2D" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Score"]
margin_left = 167.783
margin_top = 72.4455
margin_right = 312.783
margin_bottom = 125.445
custom_constants/separation = -2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="Score/VBoxContainer"]
margin_right = 145.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 14 )
text = "BEST SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HumansEaten" type="Label" parent="Score/VBoxContainer"]
margin_top = 17.0
margin_right = 145.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 14 )
text = "HUMANS EATEN: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tricks" type="Label" parent="Score/VBoxContainer"]
margin_top = 34.0
margin_right = 145.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 14 )
text = "TRICKS: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTween" type="Tween" parent="."]

[node name="CutsceneLabelNode" type="Node2D" parent="."]
position = Vector2( 188.443, 73.873 )
scale = Vector2( 0.5, 0.5 )

[node name="CutscenePlayer" type="AnimationPlayer" parent="CutsceneLabelNode"]
anims/CutsceneGrow = SubResource( 7 )

[node name="CutsceneLabel" type="Label" parent="CutsceneLabelNode"]
anchor_bottom = 0.5
margin_right = 214.001
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 106.38, 11.2373 )
custom_fonts/font = ExtResource( 14 )
text = "press C to view the cutscene!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]

[node name="Snowflakes" parent="." instance=ExtResource( 15 )]

[connection signal="area_entered" from="CenterContainer/ClickNode/SkinButton/ClickArea" to="." method="_on_ClickArea_area_entered"]
[connection signal="area_exited" from="CenterContainer/ClickNode/SkinButton/ClickArea" to="." method="_on_ClickArea_area_exited"]
[connection signal="animation_finished" from="CenterContainer/ClickNode/ClickButtonPlayer" to="." method="_on_ClickButtonPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="StartTween" to="." method="_on_StartTween_tween_all_completed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
